--- a/app/src/main/res/layout/recycler_message_row.xml
+++ b/app/src/main/res/layout/recycler_message_row.xml
@@ -32,6 +32,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Receiver Name"
+                    android:visibility="gone"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="@id/leftMessage"
